[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moleapp-rl-training"
version = "0.1.0"
description = "Reinforcement Learning training pipeline for MoleApp Alpha trading agents"
requires-python = ">=3.11"
dependencies = [
    "ray[rllib]>=2.40.0",
    "ray[tune]>=2.40.0",
    "gymnasium>=0.29.0",
    "torch>=2.1.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "wandb>=0.16.0",
    "ta>=0.11.0",              # Technical analysis indicators
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",             # Cloudflare R2 (S3-compatible)
    "psycopg2-binary>=2.9.0",   # Prod DB export
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
include = ["data*", "envs*", "training*", "evaluation*", "serving*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (PPO training, deselect with '-m not slow')"]
